# Lesson-QT_7

Task_1_v1_customPlot/: CMakeLists.txt  graphcp.cpp  graphcp.h  graphcp.ui  mainwindow.cpp  mainwindow.h
